--- a/demo/CODEX2.Rmd
+++ b/demo/CODEX2.Rmd
@@ -93,10 +93,26 @@ gc_qc = gc_qc_codex2
 norm_index = norm_index_codex2
 
 normObj=normalize_codex2_ns(Y_qc = Y_qc, gc_qc = gc_qc, 
-                            K = 1:3, norm_index = norm_index)
+                            K = 1:6, norm_index = norm_index)
 Yhat.ns=normObj$Yhat; fGC.hat.ns=normObj$fGC.hat;
 beta.hat.ns=normObj$beta.hat; g.hat.ns=normObj$g.hat; h.hat.ns=normObj$h.hat
 AIC.ns=normObj$AIC; BIC.ns=normObj$BIC; RSS.ns=normObj$RSS
+```
+
+
+Choose the number of latent Poisson factors. Use BIC as the model selection metric by default.
+
+```{r, eval=FALSE}
+choiceofK(AIC.ns, BIC.ns, RSS.ns, K = 1:6 , filename = "codex2_ns_choiceofK.pdf")
+```
+
+
+```{r, echo=FALSE, fig1, fig.height = 2.5, fig.width = 6, fig.align = "center"}
+par(mfrow = c(1, 3))
+plot(1:6, RSS.ns, type = "b", xlab = "Number of latent variables", pch=20)
+plot(1:6, AIC.ns, type = "b", xlab = "Number of latent variables", pch=20)
+plot(1:6, BIC.ns, type = "b", xlab = "Number of latent variables", pch=20)
+par(mfrow = c(1,1))
 ```
 
 
@@ -106,7 +122,7 @@ We can empirically identify common CNV regions by a first-pass CODEX run: For ex
 
 ```{r, message= FALSE, eval=FALSE}
 # Empirically identify common CNV regions from the data.
-normObj=normalize_null(Y_qc = Y_qc, gc_qc = gc_qc, K = 1:3)
+normObj=normalize_null(Y_qc = Y_qc, gc_qc = gc_qc, K = 1:6)
 z.codex = log(Y_qc/normObj$Yhat[[which.max(normObj$BIC)]])
 plot(1:nrow(z.codex), apply(z.codex,1,sd))
 which(apply(z.codex,1,sd)>=0.25) 
@@ -117,7 +133,7 @@ cnv_index2 = 1580:1620
 head(cnv_index1 == cnv_index2)
 
 normObj=normalize_codex2_nr(Y_qc = Y_qc, gc_qc = gc_qc, 
-                            K = 1:3, cnv_index = cnv_index1)
+                            K = 1:6, cnv_index = cnv_index1)
 Yhat.nr=normObj$Yhat; fGC.hat.nr=normObj$fGC.hat;
 beta.hat.nr=normObj$beta.hat; g.hat.nr=normObj$g.hat; h.hat.nr=normObj$h.hat
 AIC.nr=normObj$AIC; BIC.nr=normObj$BIC; RSS.nr=normObj$RSS
@@ -126,13 +142,16 @@ AIC.nr=normObj$AIC; BIC.nr=normObj$BIC; RSS.nr=normObj$RSS
 
 # Running Poisson-likelihood recursive segmentation by CODEX2
 ```{r, message=FALSE}
-finalcall.codex2.ns <- segment(Y_qc, Yhat.ns, optK = which.max(BIC.ns),
-                               K = 1:3, sampname_qc = paste('sample',1:ncol(Y_qc),sep=''),
+finalcall.codex2.ns <- segment.recursive(Y_qc, Yhat.ns, optK = which.max(BIC.ns),
+                               K = 1:6, sampname_qc = paste('sample',1:ncol(Y_qc),sep=''),
                                ref_qc = IRanges(start=1:nrow(Y_qc)*100, end=1:nrow(Y_qc)*100+50),
                                chr = 18, lmax = 200, mode = "integer")
 # For CODEX2 with negative control regions, simply change 'ns' to 'nr'.
 nrow(finalcall.codex2.ns[finalcall.codex2.ns[,'st_exon']=='1580',])
 head(finalcall.codex2.ns[finalcall.codex2.ns[,'st_exon']=='1580',])
+
+# write.table(finalcall.codex2.ns, file = 'finalcall.codex2.ns.int.txt', 
+#             sep='\t', quote=FALSE, row.names=FALSE)
 ```
 
 
