updated pseudo-bulk generation

--- a/demo/CODEX2.Rmd
+++ b/demo/CODEX2.Rmd
@@ -104,7 +104,7 @@ Estimate library size factor based on genome-wide read depth after QC. It is imp
 
 ```{r, message=FALSE}
 Y.nonzero <- Y_qc[apply(Y_qc, 1, function(x){!any(x==0)}),]
-pseudo.sample <- apply(Y.nonzero,1,function(x){prod(x)^(1/length(x))})
+pseudo.sample <- apply(Y.nonzero,1,function(x){exp(1/length(x)*sum(log(x)))})
 N <- apply(apply(Y.nonzero, 2, function(x){x/pseudo.sample}), 2, median)
 ```
 
